// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooButtonComponent Snapshots Should have icon only 1`] = `
<yoo-button
  class="icon-only hydrated"
  data-yoo-button-host=""
  isloading="true"
  title="Button loading"
>
  <!---->
  <button
    class="container"
    data-yoo-button=""
  >
    <div
      class="value"
      data-yoo-button=""
    >
      Button loading
    </div>
  </button>
</yoo-button>
`;

exports[`YooButtonComponent Snapshots Should have loading icon and no title 1`] = `
<yoo-button
  class="accent hydrated"
  data-yoo-button-host=""
  isloading="true"
  title="Button loading"
>
  <!---->
  <button
    class="container"
    data-yoo-button=""
  >
    <div
      class="value"
      data-yoo-button=""
    >
      Button loading
    </div>
  </button>
</yoo-button>
`;

exports[`YooButtonComponent Snapshots Should have text content 1`] = `
<yoo-button
  class="accent hydrated"
  data-yoo-button-host=""
  title="Button accent"
>
  <!---->
  <button
    class="container"
    data-yoo-button=""
  >
    <div
      class="value"
      data-yoo-button=""
    >
      Button accent
    </div>
  </button>
</yoo-button>
`;

exports[`YooButtonComponent Snapshots Should have text content and icon 1`] = `
<yoo-button
  class="hydrated"
  data-yoo-button-host=""
  icon="yo-fire"
  title="Button accent"
>
  <!---->
  <button
    class="container"
    data-yoo-button=""
  >
    <div
      class="value"
      data-yoo-button=""
    >
      <span
        class="icon"
        data-yoo-button=""
      >
        <i
          class="yo-fire"
          data-yoo-button=""
        />
      </span>
      Button accent
    </div>
  </button>
</yoo-button>
`;
